[tool.poetry]
name = "bitrender"
version = "0.1.0"
description = ""
authors = ["Robin Schyboll <Robin.Schyboll@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
asyncpg = "^0.26.0"
aerich = "^0.7.0"
tortoise-orm = "^0.19.2"
bcrypt = "^4.0.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
email-validator = "^1.3.0"
python-multipart = "^0.0.5"
Faker = "^14.2.1"
fastapi-mail = "^1.1.4"
antidote = "^2.0.0"
jsonref = "^0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
mypy = "^0.971"
flake8 = "^5.0.4"
black = "^22.8.0"
pylint = "^2.15.3"
isort = "^5.10.1"
Sphinx = "^5.2.0"
pytest-mock = "^3.8.2"
pytest-asyncio = "^0.19.0"
pytest-cov = "^3.0.0"
import-linter = "^1.3.0"
