[tool.poetry]
name = "bitrender"
version = "0.1.0"
description = ""
authors = ["Robin Schyboll <Robin.Schyboll@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.86.0"
uvicorn = "^0.19.0"
asyncpg = "^0.27.0"
aerich = "^0.7.0"
tortoise-orm = "^0.19.2"
bcrypt = "^4.0.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
email-validator = "^1.3.0"
python-multipart = "^0.0.5"
Faker = "^14.2.1"
fastapi-mail = "^1.1.4"
antidote = "^2.0.0"
jsonref = "^0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
flake8 = "^5.0.4"
black = "^22.10.0"
pylint = "^2.15.5"
isort = "^5.10.1"
Sphinx = "^5.2.0"
pytest-mock = "^3.10.0"
pytest-asyncio = "^0.20.1"
pytest-cov = "^4.0.0"
import-linter = "^1.4.0"
mypy = "^0.982"
sphinx = "^5.3.0"
