[tool.poetry]
name = "bitrender-worker"
version = "0.1.0"
description = ""
authors = ["Robin Schyboll <Robin.Schyboll@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
mypy = "^0.931"
flake8 = "^4.0.1"
black = "^21.12b0"
pylint = "^2.12.2"
isort = "^5.10.1"
Sphinx = "^4.4.0"
pytest-mock = "^3.6.1"
pytest-asyncio = "^0.17.2"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
